# infiniteTensorTask2

./: .gitignore  CMakeLists.txt  LICENSE  test_gpu.cu
include/: baseline.cuh  config.cuh  softmax.cuh  softmax_v1.cuh  softmax_v2.cuh
src/: baseline.cu  main.cu  softmax.cu  softmax_v1.cu  softmax_v2.cu
